Finally fixed list bullets overlapping other elements

--- a/themes/abridge/sass/abridge.scss
+++ b/themes/abridge/sass/abridge.scss
@@ -559,6 +559,7 @@ $syntax: true !default;//syntax highlighting for code blocks
     font-style: normal;
     font-weight: var(--fw);
     font-size: var(--fs);
+    overflow: hidden;
   }
 
   // Lists
